Added map control to GPS coordinate (shown on coordinate click/touch) Update to librawfx 1.4 (performance issues and metadata) Added GPS coord conversation into MediaFile Fixed some copy bug in lighttable (could not copy edit files)