@@ -709,8 +709,14 @@
         <dependency>
             <groupId>org.librawfx</groupId>
             <artifactId>LibRawFX</artifactId>
-            <version>1.3</version>
+            <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.sothawo</groupId>
+            <artifactId>mapjfx</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
         
         
     </dependencies>
@@ -848,6 +854,7 @@
                                         <module>gluegen.rt</module>
                                         <module>jdk.incubator.foreign</module>
                                         <module>org.librawfx</module>
+                                        <module>com.sothawo.mapjfx</module>
                                     </modules>                                                                                                          
                                 </configuration>
                             </execution> 
@@ -911,7 +918,9 @@
                                         <argument>--java-options</argument>
                                         <argument>--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx</argument>                                        
                                         <argument>--java-options</argument>
-                                        <argument>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</argument>                                                                                
+                                        <argument>--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx</argument>              
+                                        <argument>--java-options</argument>
+                                        <argument>--add-opens java.base/java.net=com.sothawo.mapjfx</argument>                                                                  
                                         <argument>${param1}</argument>
                                         <argument>${param2}</argument>
                                         <argument>${param3}</argument>
